docs/artifacts/multi-source-tasks/tasksource-red-compile-error.txt
TDD RED Phase - TaskSource Protocol Tests Compile Failure
==========================================================

Date: 2026-01-15 08:23
Test File: TimeBox/TimeBoxTests/TaskSourceTests.swift
Command: xcodebuild test -scheme TimeBox -destination 'platform=iOS Simulator,name=iPhone 17 Pro' -only-testing:TimeBoxTests/TaskSourceTests

COMPILE ERRORS (Expected - Protocols not yet implemented):

/Users/hem/Documents/opt/my-daily-sprints/TimeBox/TimeBoxTests/TaskSourceTests.swift:6:22: error: cannot find type 'TaskSourceData' in scope
struct MockTaskData: TaskSourceData {
                     ^~~~~~~~~~~~~~

/Users/hem/Documents/opt/my-daily-sprints/TimeBox/TimeBoxTests/TaskSourceTests.swift:18:29: error: cannot find type 'TaskSource' in scope
final class MockTaskSource: TaskSource, TaskSourceWritable {
                            ^~~~~~~~~~

/Users/hem/Documents/opt/my-daily-sprints/TimeBox/TimeBoxTests/TaskSourceTests.swift:18:41: error: cannot find type 'TaskSourceWritable' in scope
final class MockTaskSource: TaskSource, TaskSourceWritable {
                                        ^~~~~~~~~~~~~~~~~~

BUILD FAILED

This is the expected TDD RED result. The tests cannot compile because:
1. TaskSourceData protocol does not exist
2. TaskSource protocol does not exist
3. TaskSourceWritable protocol does not exist

Next Step: Implement protocols in Sources/Protocols/TaskSource.swift (TDD GREEN)
